whoops, forgot to commit, basically finalized the JS. working on cSS now

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <title>Customer Database</title>
+    <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+  	<div id="container">
+  		<!-- employee profile should go here -->
+  	</div>
     <script src="customers.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
