--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html>
   <head>
     <title>Customer Database</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-  	<div id="container">
+  	<div class="container">
+  		<h1>Internal Company Directory</h1>
+  		<ul id="employee_wrapper">
   		<!-- employee profile should go here -->
+  		</ul>
   	</div>
     <script src="customers.js"></script>
     <script src="main.js"></script>
