sigh, i have no idea why my responsive CSS isn't working at all

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>Customer Database</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta charset="utf-8" />
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
